--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,17 +1,18 @@
 .l-site-footer {
-   font-size: 10px;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   right: 0;
 }
 
 .c-copyright {
    display: flex;
    justify-content: center;
-   position: absolute;
    width: 100%;
-   left: 0;
-   bottom: 0;
+   background: #2d2d2d;
    background-image: linear-gradient(#2d2d2d, #151515);
    border-top: 1px solid black;
-   padding: .5em 0;
+   padding: 5px 0;
 
    &__text {
       font-size: 1.2rem;
