--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,10 @@
 @import 'variables';
 @import 'mixins';
 @import 'header';
+@import 'task-actions';
 @import 'main';
 @import 'footer';
+
+.h-hide {
+   display: none;
+}
