--- a/scss/_task-actions.scss
+++ b/scss/_task-actions.scss
@@ -7,18 +7,17 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
-   position: absolute;
+   // position: absolute;
+   // z-index: 2;
    width: 100%;
-   z-index: 2;
    color: rgb(170, 170, 170);
    background-color: #333;
-   background-image: linear-gradient(#333, #222);
+   background-image: linear-gradient(-30deg, #333, #222);
 }
 
 .c-search-task {
    display: flex;
    flex-wrap: wrap;
-   display: none; // daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa do usuniecia
    width: 90%;
    margin: 0 auto;
    padding: 10px 0 20px;
@@ -45,7 +44,6 @@
    flex-wrap: wrap;
    justify-content: center;
    padding: 10px 0;
-   display: none; // daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa do usuniecia
 
    &__cat,
    &__task {
@@ -53,7 +51,7 @@
       flex-wrap: wrap;
       justify-content: flex-end;
       flex-basis: 90%;
-      padding: 5px 0 10px;
+      padding: 0px 0 10px;
    }
 
    &__label {
