--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -137,7 +137,7 @@
             }
 
             &:last-child {
-               padding-left: 6px;
+               padding: 0 6px;
                color: rgba(255, 255, 255, 0.80);
                transition: all 0.6s ease;
             }
